# HKJCScrapper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
docs/: commands.md  database.md  docker-deploy.md  enhancement_plan.md  hkjc_api_guide.txt  odds_types.md  project_modules_high_level.md  project_plan.md
docs/api/: base_api_sample_response.json
resources/: description-ch-req.txt  description-ch-res.json  description-en-req.txt  description-en-res.json  match-list-req-1.txt  match-list-res-1.json  single-match-req-1.txt  single-match-req-2.txt  single-match-res-1.json  single-match-res-2.json
src/hkjc_scrapper/: __main__.py  cli.py  client.py  config.py  db.py  main.py  models.py  parser.py  reference_data.py  scheduler.py  tg_commands.py  tg_msg_client.py
tests/: conftest.py  test_cli.py  test_client_integration.py  test_db.py  test_db_integration.py  test_models.py  test_parser.py  test_scheduled_jobs.py  test_scheduler.py  test_tg_commands.py  test_tg_msg_client.py
