[project]
name = "hkjc-scrapper"
version = "0.1.0"
description = "HKJC football odds scraper - fetches and stores match odds data from HKJC GraphQL API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pymongo>=4.6",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "apscheduler>=3.10",
]

[project.scripts]
hkjc-scrapper = "hkjc_scrapper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hkjc_scrapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
